<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threads_label"
            android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextThreads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="8"
            android:inputType="numberDecimal"
            android:hint="@string/threads_hint"
            android:imeOptions="actionNext"
            android:textSize="12sp"
            android:cursorVisible="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delay_label"
            android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="0"
            android:inputType="number"
            android:hint="@string/delay_hint"
            android:imeOptions="actionNext"
            android:textSize="12sp"
            android:cursorVisible="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_label"
            android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTxSeconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="10"
            android:inputType="number"
            android:hint="@string/tx_hint"
            android:imeOptions="actionNext"
            android:textSize="12sp"
            android:cursorVisible="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_label"
            android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSleepSeconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="5"
            android:inputType="number"
            android:hint="@string/sleep_hint"
            android:imeOptions="actionNext"
            android:textSize="12sp"
            android:cursorVisible="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payload_label"
            android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPayloadSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="0"
            android:inputType="number"
            android:hint="@string/payload_hint"
            android:imeOptions="actionNext"
            android:textSize="12sp"
            android:cursorVisible="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchBombard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bombard_label"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern_label"
            android:textSize="12sp"/>

        <Spinner
            android:id="@+id/spinnerPayloadPattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack_type_label"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinnerAttackType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStartStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_btn"
        android:layout_weight="1"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchLogView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/log_label"
            android:textSize="12sp"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRootTools"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_root_tools"
            android:textSize="12sp" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1B1B1B"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:scrollbars="vertical"> <!-- Enables vertical scrollbar -->

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/logTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="100"
                android:padding="8dp"
                android:scrollbarStyle="insideOverlay"
                android:textColor="#00FF00"
                android:textSize="9sp" />
        </ScrollView>

    </LinearLayout>
</LinearLayout>
